final of the day

--- a/index.html
+++ b/index.html
@@ -428,10 +428,10 @@
                   </svg>
                 </span>
                 <span class="round-button__c">
-                  <svg width="67" height="61">
+                  <!-- <svg width="67" height="61">
                     <use xlink:href="#c"></use>
-                  </svg>
-                  <!-- <img class="c"src="img/mono-logo.png" width="67" height="61" > -->
+                  </svg> -->
+                  <img class="c"src="img/mono-logo.png" width="67" height="61" >
                 </span>
               </a>
               <a class="modern-hero__more arrow-link" href="about-reboot.html">
@@ -667,7 +667,7 @@
       <section class="carousel-section carousel-section--separator carousel-section--pb-large">
         <div class="carousel-section__container container container--size-large">
           <header class="carousel-section__header row align-items-end align-items-md-center">
-            <h2 class="carousel-section__title col-8 col-md-10" data-aos="fade-up">Latest Works</h2>
+            <h2 class="carousel-section__title col-8 col-md-10" data-aos="fade-up"><a class="yello">| </a>Latest Works</h2>
             <div class="carousel-section__nav col-12 col-md-2 order-last order-md-0" data-aos="fade-up">
               <button class="nav-btn nav-btn--prev" data-target=".__js_carousel-latest-projects" type="button">
                 <svg width="50" height="16">
@@ -729,7 +729,7 @@
       </section>
       <section class="team-section team-section--pb-0">
         <div class="team-section__container container container--size-large">
-          <h2 class="team-section__title" data-aos="fade-up">Our Magic Team</h2>
+          <h2 class="team-section__title" data-aos="fade-up"><a class="yello">| </a>Our Magic Team</h2>
           <div class="team-section__grid">
             <div class="team-section__item">
               <div class="member-card" data-aos="fade-up">
@@ -740,8 +740,8 @@
                   <div class="member-card__title">Yash Dave </div>
                   <div class="member-card__post">Director, Performance Marketing Lead</div>
                   <!-- Social-->
-                  <ul class="member-card__social social--hover-white social">
-                    <li class="social__item">
+                  
+                    <!-- <li class="social__item">
                       <a class="social__link" href="#" target="_blank">
                         <svg width="20" height="20" aria-label="linkedin icon">
                           <use xlink:href="#linkedin"></use>
@@ -764,8 +764,8 @@
                         </svg>
                         <span class="visually-hidden">twitter</span>
                       </a>
-                    </li>
-                  </ul>
+                    </li> -->
+                  
                 </div>
               </div>
             </div>
@@ -778,7 +778,7 @@
                   <div class="member-card__title">Shraddha Dave</div>
                   <div class="member-card__post">Director, Creative Director</div>
                   <!-- Social-->
-                  <ul class="member-card__social social--hover-white social">
+                  <!-- <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
                       <a class="social__link" href="#" target="_blank">
                         <svg width="20" height="20" aria-label="linkedin icon">
@@ -802,7 +802,7 @@
                         </svg>
                         <span class="visually-hidden">twitter</span>
                       </a>
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
               </div>
@@ -816,7 +816,7 @@
                   <div class="member-card__title">Dileep Singh</div>
                   <div class="member-card__post">Motion Designer, Full Stack Web Developer </div>
                   <!-- Social-->
-                  <ul class="member-card__social social--hover-white social">
+                  <!-- <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
                       <a class="social__link" href="#" target="_blank">
                         <svg width="20" height="20" aria-label="linkedin icon">
@@ -841,7 +841,7 @@
                         <span class="visually-hidden">twitter</span>
                       </a>
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
@@ -854,7 +854,7 @@
                   <div class="member-card__title">Parita Jhaveri</div>
                   <div class="member-card__post">Designer</div>
                   <!-- Social-->
-                  <ul class="member-card__social social--hover-white social">
+                  <!-- <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
                       <a class="social__link" href="#" target="_blank">
                         <svg width="20" height="20" aria-label="linkedin icon">
@@ -879,7 +879,7 @@
                         <span class="visually-hidden">twitter</span>
                       </a>
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
@@ -892,7 +892,7 @@
                   <div class="member-card__title">Priyanshu saroj</div>
                   <div class="member-card__post">Social Media Manager </div>
                   <!-- Social-->
-                  <ul class="member-card__social social--hover-white social">
+                  <!-- <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
                       <a class="social__link" href="#" target="_blank">
                         <svg width="20" height="20" aria-label="linkedin icon">
@@ -917,7 +917,7 @@
                         <span class="visually-hidden">twitter</span>
                       </a>
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
@@ -926,7 +926,7 @@
       </section>
       <section class="start-project">
         <div class="start-project__container container container--size-large">
-          <h1 class="team-section__title" data-aos="fade-up">Let's Connect</h1>
+          <h1 class="team-section__title" data-aos="fade-up"> <a class="yello">| </a>Let's Connect! </h1>
           <div class="start-project__grid row g-0">
             <div class="start-project__discuss discuss-project discuss-project--no-padding col-12 col-lg-8">
               <div class="discuss-project__wrapper" data-aos="fade-up">
@@ -975,7 +975,7 @@
                 </form>
               </div>
             </div>
-            <div class="start-project__partners partners partners--no-padding col-12 col-lg-4">
+            <!-- <div class="start-project__partners partners partners--no-padding col-12 col-lg-4">
               <ul class="partners__list row align-items-center">
                 <li class="partners__item col-12 col-sm-6 col-md-3 col-lg-12 col-xl-6" data-aos="fade-up">
                   <img src="img/picture/partners/1.png" width="209" height="103" alt="behr handelsagentur">
@@ -998,7 +998,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
       </section>
     </main>
     <footer class="footer __js_fixed-footer">
